# snake-showdown

./: openapi.yaml  package-lock.json  package.json
.devcontainer/: devcontainer.json
backend/: README.md  pyproject.toml
backend/snake_showdown/: __init__.py  database.py  main.py  models.py
backend/snake_showdown/routers/: auth.py  leaderboard.py  spectate.py
backend/tests/: test_api.py
frontend/: README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/auth/: AuthForm.tsx
frontend/src/components/game/: GameControls.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/leaderboard/: LeaderboardTable.tsx
frontend/src/components/spectate/: PlayerCard.tsx
frontend/src/components/ui/: button.tsx
frontend/src/hooks/: useSnakeGame.ts
frontend/src/lib/test/: api.test.ts  gameTypes.test.ts  useSnakeGame.test.ts
frontend/src/pages/: AuthPage.tsx  SpectatePage.tsx
frontend/src/services/: api.ts
src/: index.css
src/components/game/: GameCanvas.tsx
src/components/spectate/: SpectateView.tsx
src/hooks/: useAuth.ts
src/lib/test/: gameLogic.test.ts  setup.ts
src/pages/: Index.tsx  LeaderboardPage.tsx  PlayPage.tsx
src/types/: game.ts
