[project]
name = "snake-showdown"
version = "0.1.0"
description = "Snake Showdown API backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.123.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
]
